Final text changes minor revision

--- a/Article JMP/EstAndHypTestBayesCircGLM.tex
+++ b/Article JMP/EstAndHypTestBayesCircGLM.tex
@@ -105,7 +105,7 @@ urlcolor=blue
 
 
 \begin{abstract}
-Motivated by a study from cognitive psychology, we develop a Generalized Linear Model for circular data within the Bayesian framework, using the von Mises distribution. Although circular data arise in a wide variety of scientific fields, the number of methods for their analysis is limited. Our model allows inclusion of both continuous and categorical covariates. In a frequentist setting, this type of model is plagued by the likelihood surface of its regression coefficients, which is not logarithmically concave. In a Bayesian context, a weakly informative prior solves this issue, while for other paramaters noninformative priors are available. In addition to an MCMC sampling algorithm, we develop Bayesian hypothesis tests based on the Bayes factor for both equality and inequality constrained hypotheses. In a simulation study, it can be seen that our method performs well. Finally, we apply this model to a dataset from experimental psychology, and show that it provides valuable insight for applied researchers. Extensions to dependent observations are within reach by means of the multivariate von Mises distribution.
+Motivated by a study from cognitive psychology, we develop a Generalized Linear Model for circular data within the Bayesian framework, using the von Mises distribution. Although circular data arise in a wide variety of scientific fields, the number of methods for their analysis is limited. Our model allows inclusion of both continuous and categorical covariates. In a frequentist setting, this type of model is plagued by the likelihood surface of its regression coefficients, which is not logarithmically concave. In a Bayesian context, a weakly informative prior solves this issue, while for other paramaters noninformative priors are available. In addition to an MCMC sampling algorithm, we develop Bayesian hypothesis tests based on the Bayes factor for both equality and inequality constrained hypotheses. In a simulation study, it can be seen that our method performs well. The analyses are available in the package \href{https://github.com/keesmulder/CircGLMBayes}{CircGLMBayes}. Finally, we apply this model to a dataset from experimental psychology, and show that it provides valuable insight for applied researchers. Extensions to dependent observations are within reach by means of the multivariate von Mises distribution.
 \end{abstract}
 
 \textbf{Keywords}: Circular data; MCMC; Bayes factor; Savage-Dickey density ratio;
@@ -230,7 +230,7 @@ However, because the linear predictors are standardized, the interpretation of t
 \end{equation}
  where \( N(\mu, \sigma^2) \) denotes the Normal distribution with mean \( \mu \) and variance \( \sigma^2\). For a Normal prior with any finite \(\sigma^2\), there are no non-zero asymptotes in the conditional posterior of \(\beta\) for any values of \(\beta_0, \kappa, \boldsymbol{\delta},\) because \(\log f_N(x \mid 0, \sigma^2) \rightarrow -\infty\) as \(\vert x \vert \rightarrow \infty.\) As \( \sigma^2 \rightarrow 0,\) the prior becomes more informative and the posterior for \( \beta_k \) centers on 0. As \( \sigma^2 \rightarrow \infty,\) the prior becomes less informative, but the posterior becomes more irregular, with large plateaus and more local maxima.   By default, we choose \( \sigma^2 = 1\) so that the prior is the standard Normal distribution, which represents the weakly informative prior mentioned previously, for which values of \( \vert\beta_k\vert > 1.5 \) are a priori unlikely.
 
-To illustrate this, the resulting posterior is compared to the constant prior in Figure \ref{LikelihoodPriorComparisonBeta}. The posterior is based on a synthetic data set of 7 observations with a single predictor \(\bx = -3, \dots, 3,\) which is standardized and the outcome is then computed as \( \theta_i =  2 \tan^{-1}(x_i) + \varepsilon_i \) where \( \varepsilon_i \sim N(0, 1/10),\) so the true \(\beta\) is 1. In Figure \ref{LikelihoodPriorComparisonBeta}, the conditional posterior of \(\beta\) is displayed given \(\beta_0 = 0, \kappa = 1.\) Figure \ref{BetaConstantPrior} gives a zoomed-out view of the constant prior, where the asymptotes are clearly visible. Figure \ref{BetaNormalPrior} shows a zoomed-in view of the resulting conditional posterior from a prior with \(\sigma^2 = 1/5\) (dashed), \(\sigma^2 = 1\) (dashed), \(\sigma^2 = 5\) (dotted). It can be seen that the \(N(0, 5)\) prior takes a shape not unlike the constant prior in Figure~\ref{BetaConstantPrior}, although the asymptote is avoided. The \(N(0, 1/5)\) prior can be seen to have a strong influence on the posterior estimate for this data where the true \(\beta = 1.\) The \(N(0, 1)\) prior represents a balance for which the asymptotes are solved, but the posterior estimates are very close to the maximum likelihood estimates. In practical settings generally \(\vert\beta\vert << 1,\) so that the influence of the prior will often be minimal. For these priors the posterior not necessarily logarithmically concave, which might make optimization difficult, but which MCMC methods handle well.
+To illustrate this, the resulting posterior is compared to the posterior resulting from the constant prior in Figure \ref{LikelihoodPriorComparisonBeta}. The posterior is based on a synthetic data set of 7 observations with a single predictor \(\bx = -3, \dots, 3,\) which is standardized and the outcome is then computed as \( \theta_i =  2 \tan^{-1}(x_i) + \varepsilon_i \) where \( \varepsilon_i \sim N(0, 1/10),\) so the true \(\beta\) is 1. In Figure \ref{LikelihoodPriorComparisonBeta}, the conditional posterior of \(\beta\) is displayed given \(\beta_0 = 0, \kappa = 1.\) Figure \ref{BetaConstantPrior} gives a zoomed-out view of the  posterior resulting from the constant prior, where the asymptotes are clearly visible. Figure \ref{BetaNormalPrior} shows a zoomed-in view of the resulting conditional posterior from a prior with \(\sigma^2 = 1/5\) (dashed), \(\sigma^2 = 1\) (dashed), \(\sigma^2 = 5\) (dotted). It can be seen that the \(N(0, 5)\) prior takes a shape not unlike the one seen in Figure~\ref{BetaConstantPrior}, although the asymptote is avoided. The \(N(0, 1/5)\) prior can be seen to have a strong influence on the posterior estimate for this data where the true \(\beta = 1.\) The \(N(0, 1)\) prior represents a balance for which the asymptotes are solved, but the posterior estimates are very close to the maximum likelihood estimates. In practical settings generally \(\vert\beta\vert << 1,\) so that the influence of the prior will often be minimal. For these priors the posterior is not necessarily logarithmically concave, which might make optimization difficult, but which MCMC methods handle well.
 
 
 
@@ -582,7 +582,7 @@ Generally, the correct hypothesis becomes favored as the sample size increases, 
 
 In this section, our method will be applied to data from \citet{van2013superior}. In this study, an experiment was conducted to assess whether deafness enhances haptic perception. Haptic perception is assessed here by means of a haptic parallel setting task, where subjects are required to set two bars parallel, so that errors are measured in an angular differece to the reference direction. In this task, errors generally fall in the counterclockwise direction, which produces a positive score on the deviation from the target. Therefore, groups that are less apt at this task are expected to have stronger positive deviations, counterclockwise from the reference direction.
 
-Three groups are distinguished: deaf subjects, sign language interpreters and a control group. Table \ref{ExampleDescrTable} shows some summary statistics of background variables for the three groups, as well as the main outcome, deviation. Note that the original study examines two different conditions in a repeated measures design, an "immediate" and a "delayed" condition, of which we only show the "immediate" outcome for illustration purposes. Analyses for the "delayed" condition were similar.
+Three groups are distinguished: deaf subjects, sign language interpreters and a control group. Table \ref{ExampleDescrTable} shows some summary statistics of background variables for the three groups, as well as the main outcome, deviation. Note that the original study examines two different conditions in a repeated measures design, an "immediate" and a "delayed" condition, of which we only show the "immediate" outcome for illustration purposes. Therefore, the data under consideration are made independent.
 
 The analysis will proceed as follows. First, a basic ANOVA model will be fitted to this dataset. Then, an ANCOVA model is examined. Lastly, informative inequality constrained hypotheses based on theory are evaluated.
 
@@ -810,9 +810,14 @@ In sum, the Bayesian approach provides a promising way to draw inference from ci
 
 This work was supported by a Vidi grant awarded to I. Klugkist from NWO, the Dutch Organization for Scientific Research (NWO 452-12-010).
 
+The authors are grateful to two reviewers for helpful comments.
+
 The authors are grateful to A. Postma for providing the illustrative data.
 
-All code for both the statistical tools as well as the simulation study is available online at \url{https://github.com/keesmulder/BayesMultCircCovariates}.
+User-friendly code for the main analyses of the paper can be found in a GitHub package at \url{https://github.com/keesmulder/CircGLMBayes}.
+
+All code for both the statistical tools, the simulation study and the paper is available online at \url{https://github.com/keesmulder/BayesMultCircCovariates}.
+
 
 
 
